# PocketTTS.cpp

./: .gitignore  CMakeLists.txt  DEVELOPER.md  INSTALL.md  LICENSE  MOSS-TTS-Nano.cpp  README.md  TEST_RESULTS.md  download_models.py  download_voices.py  export_onnx.py  moss_tts_nano.cpp  pocket_tts.cpp  setup-moss-tts.sh  spm_decode  spm_encode  spm_normalize
.github/workflows/: release.yml
